--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,32 +1,14 @@
 <nav class="navbar navbar-inverse">
   
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li><a class="glyphicon glyphicon-home" href="#"></a></li>
-        <li><a href="#">link1</a></li>
-        <li><a href="#">link2</a></li>
-        <li><a href="#">link3</a></li>
-        <form class="navbar-form navbar-left" role="search">
-        <ul class="nav navbar-nav navbar-right">
-            <div class="form-group">
-                <input type="text" class="form-control" placeholder="Buscar">
-              </div>
-              <button type="submit" class="btn btn-default">Buscar</button>
-        </ul>
-      </form>
-      
-          
+        <li><a class="glyphicon glyphicon-home" [routerLink]="['/home']"></a></li>
+        <li><a [routerLink]="['/perfil']">Perfil</a></li>
+        <li><a [routerLink]="['/actividades']">Actividades</a></li>
+        <li><a [routerLink]="['/habilidades']">Habilidades</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Opciones<span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Opcion1</a></li>
-              <li><a href="#">Opcion2</a></li>
-              <li><a href="#">Opcion3</a></li>
-             
-            </ul>
-          </li>
+          <li><a [routerLink]="['/contactos']">Contacto</a></li>
         </ul>
     </div>
 </nav>
