--- a/src/app/components/habilidades/habilidades.component.html
+++ b/src/app/components/habilidades/habilidades.component.html
@@ -1,3 +1,8 @@
-<p>
-  habilidades works!
-</p>
+<p>Lenguajes:</p>
+<ul>
+<li *ngFor="let lenguaje of lenguajes">{{lenguaje}}</li>
+</ul>
+<p>IDE's: </p>
+<ul>
+    <li *ngFor="let IDE of IDES">{{IDE}}</li>
+</ul>
