--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,2 @@
-<html>
-<div class="jumbotron">
-    <h1>Bienvenidos</h1>
-    <p>Para ver mas informacion...</p>
-    <p><a class="btn btn-primary btn-lg" [routerLink]="['/perfil']" role="button">Ver perfil</a></p>
-</div>
-</html>
+<img class="img-circle" src="../assets/fotoPerfil.jpg" alt="Daniel Aparicio" width="256" height="256"/>
+<p>Daniel Aparicio</p>
