--- a/src/app/components/contactos/contactos.component.html
+++ b/src/app/components/contactos/contactos.component.html
@@ -1,3 +1,18 @@
-<p>
-  contactos works!
-</p>
+<html>
+<head>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+<body>
+    <div class="footer-col col-md-6">
+    <ul class="list-inline">
+    <li>
+      <a href="https://www.facebook.com/daniel.aparicio.77582" class="btn btn-default btn-circle btn-lg"><i class="fa fa-facebook"></i></a>
+    </li>
+    <li>    
+      <a type="button" class="btn btn-default btn-circle btn-lg" href="mailto: daparicio52@gmail.com"><i class="fa fa-envelope"></i></a>
+    </li>
+    </ul>
+    </div>
+    <p>Juan Capriles Villaroel y Santa Cruz edif. Mistral Cochabamba - Bolivia</p>
+    </body>
+</html>
