--- a/src/app/components/perfil/perfil.component.html
+++ b/src/app/components/perfil/perfil.component.html
@@ -1,3 +1,16 @@
 <p>
-  perfil works!
+  Soy una persona responsable, autodidacta y adapatable.
+  Participo en distintas actividades y siempre estoy 
+  abierto a mejoras y posibilidades. 
+  Constante en el trabajo que realizo y para resolver un
+  problema que resulte dificil.
+</p>
+<p>
+    Nombre completo: Daniel Aparicio Quintanilla
+</p>
+<p>
+    Edad: 20 años
+</p>
+<p>
+    Locación: Cochabamba, Bolivia 
 </p>
