--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -4,8 +4,10 @@
       <ul class="nav navbar-nav">
         <li><a class="glyphicon glyphicon-home" [routerLink]="['/home']"></a></li>
         <li><a [routerLink]="['/perfil']">Perfil</a></li>
+        <li><a [routerLink]="['/experiencia']">Experiencia</a></li>
         <li><a [routerLink]="['/actividades']">Actividades</a></li>
         <li><a [routerLink]="['/habilidades']">Habilidades</a></li>
+        
       </ul>
       <ul class="nav navbar-nav navbar-right">
           <li><a [routerLink]="['/contactos']">Contacto</a></li>
