--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,2 +1,2 @@
-<img class="img-circle" src="../assets/fotoPerfil.jpg" alt="Daniel Aparicio" width="256" height="256"/>
+<img class="img-circle" src="../assets/imagenes/fotoPerfil.jpg" alt="Daniel Aparicio" width="256" height="256"/>
 <p>Daniel Aparicio</p>
