ngFor agregado a las pestañas

--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -1,9 +1,5 @@
-<p>
-    Educacion:
-</p>
-<p>
-    Colegio Americano - 2001-2014 - Oruro, Bolivia
-</p>
-<p>
-    Universidad Católica Boliviana - 2015- Actualidad - Cochabamba, Bolivia
-</p>
+<p>Educacion:</p>
+<p *ngFor="let eduC of educacionC">{{eduC}}</p>
+<p> </p>
+<p> </p>
+<p *ngFor="let eduU of educacionU">{{eduU}}</p>
