--- a/src/app/components/actividades/actividades.component.html
+++ b/src/app/components/actividades/actividades.component.html
@@ -1,18 +1,15 @@
-<p>Proyectos</p>
+<p>Proyectos:</p>
+<div *ngFor="let pro of proyectos">
+<p>{{pro.titulo}}</p>
+
+<a href="{{pro.enlace}}">Enlace del proyecto</a>
 <p>
-    Proyecto hecho en C#, sistema de boletas de pago para empleados de una empresa.
-</p>
-<a href="https://gitlab.com/Samuel_UCB/SisInfo">Enlace del proyecto</a>
-<p> </p>
-<p>
-    Proyecto pagina web de la carrera de ingeneria de sistemas, UCB.
-</p>
-<a href="https://github.com/jorgechavezrnd/SisWeb117">Enlace del proyecto</a>
-<p> </p>
-<p>
-    Proyecto aplicacion web para fitness tracker, UCB.
-</p>
-<a href="https://gitlab.com/DanAparicio22/BalanceFitnessTracker">Enlace del proyecto</a>
+        
+    </p>
+</div>
+
+
+
 
 
 
