--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,2 +1,8 @@
-<img class="img-circle" src="../assets/imagenes/fotoPerfil.jpg" alt="Daniel Aparicio" width="256" height="256"/>
-<p>Daniel Aparicio</p>
+
+<body>
+    <div *ngFor="let blo of bloque">
+    <img class="img-circle center-block" src={{blo.imagen}} alt="Daniel Aparicio" width="400" height="400" />
+    <p id="nombre">{{blo.nombre}}</p>
+    </div>
+</body>
+
