--- a/src/app/components/actividades/actividades.component.html
+++ b/src/app/components/actividades/actividades.component.html
@@ -1,8 +1,7 @@
-<p>Proyectos:</p>
+<p id="titulo">Proyectos</p>
 <div *ngFor="let pro of proyectos">
-<p>{{pro.titulo}}</p>
-
-<a href="{{pro.enlace}}">Enlace del proyecto</a>
+<p id="descripcion">{{pro.titulo}}</p>
+<a type="button" class="btn btn-info" id="enlaces" href="{{pro.enlace}}">Enlace del proyecto</a>
 <p>
         
     </p>
