--- a/src/app/components/contactos/contactos.component.css
+++ b/src/app/components/contactos/contactos.component.css
@@ -1,4 +1,5 @@
-.btn-circle {
+
+  .btn-circle {
     width: 30px;
     height: 30px;
     text-align: center;
@@ -6,7 +7,7 @@
     font-size: 12px;
     line-height: 1.428571429;
     border-radius: 15px;
-    background: #3B5998;
+    background: #A6A8AB;
   }
   .btn-circle.btn-lg {
     width: 50px;
@@ -15,7 +16,6 @@
     font-size: 18px;
     line-height: 1.33;
     border-radius: 25px;
-   
   }
   .btn-circle.btn-xl {
     width: 70px;
@@ -24,7 +24,6 @@
     font-size: 24px;
     line-height: 1.33;
     border-radius: 35px;
-    
   }
   .fa-facebook{
 
@@ -34,3 +33,27 @@
    
     color: white;
   }
+  #direccion{
+    color: white;
+    font-family: serif;
+  }
+  #titulo{
+    color: white;
+    font-size: 40px;
+    text-align: center;
+    font-style: italic;
+    font-family: serif;
+  }
+  .wrapper {
+    text-align: center;
+   
+}
+
+ul { font-family: Arial, Verdana;
+  font-size: 14px;
+  margin: 0 auto;
+  padding: 0;
+  width:600px;
+  list-style: none;
+  text-align: center; 
+}
