--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,23 +1,10 @@
-body{
-    background-color: cadetblue;
-    background-size: 100px 100px;
-}
+
 #nombre{
     color:white;
     text-align: center;
     font-size: 45px;
-    font-family: arial;
+    font-family: serif;
 }
-.img-circle{
-    position: relative;
-   
-}
-.form-wrapperBack {
-    position: fixed;
-    height: 100%;
-    width: 100%;
-    top: 0;
-    background-image: url("/img/river.png");
-    background-size: cover;
-}
+
+
 
