--- a/src/app/components/perfil/perfil.component.html
+++ b/src/app/components/perfil/perfil.component.html
@@ -1,1 +1,8 @@
-<p *ngFor="let pI of perfilInfo">{{pI}}</p>
+<p id="titulo">Perfil</p>
+<div id="datos" *ngFor="let pI of perfilInfo">
+        <table id="tabla">
+            <tr>
+            <p>{{pI}}</p>
+            </tr>
+        </table>
+</div>
